# mangetamain

./: .gitignore  Dockerfile  README.md  data_analysis.ipynb  main.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml
.streamlit/: config.toml
dataset_analysis/: analyse_bivariee_v3.ipynb  bivariate_greg.ipynb  dataset_preprocessing.py  utils.py
dataset_analysis/cooking_effort/: 0_Exploration_data.ipynb  1_Variable_minutes.ipynb  2_Variables_steps_n_steps.ipynb  3_Variable_n_ingredients.ipynb  4_Score_effort_culinaire.ipynb
dataset_analysis/popularity/: analysis.ipynb  analysis_1.ipynb
docs/: bivariate_variable_guide.md  ci_cd.md  data_analysis_module.md
docs/source/: conf.py  index.rst  modules.rst  webapp.rst
scripts/: download_data.py  download_dataset.sh
src/: data_analysis.py  webapp.py
tests/: test_data_analysis.py  test_integration.py  test_module1.py
