[project]
name = "mangetamain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "streamlit>=1.50.0",
]
