[project]
name = "mangetamain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipynbname>=2025.8.0.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "streamlit>=1.50.0",
    "scipy>=1.16.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
